--- a/website/app/templates/ListPage.html
+++ b/website/app/templates/ListPage.html
@@ -47,7 +47,7 @@
    
     <div class="container-fluid">
       <div class="col-lg-10">
-        <input type = "checkbox" class="checkbox list-group checked-list-box">
+        <ul class="checkbox list-group checked-list-box">
           {% for items in glist %}
           <li class="list-group-item" name ="check" value="{{items}}"> {{ items }}</li>
      
@@ -74,7 +74,7 @@
           <div class="col-lg-11">
             <div class="form-group">
               <label for="text">New Item</label>
-              <input type="text" class="form-control" name="newitem">
+              <input type="text" class="form-control" name="newitem" value = "item">
             </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
