--- a/website/app/templates/index.html
+++ b/website/app/templates/index.html
@@ -14,6 +14,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/awesome-bootstrap-checkbox.css" rel="stylesheet">
+    <link href="../static/font-awesome.css" rel="stylesheet">
+    <link href="../static/build.css" rel = "stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="../static/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
