--- a/website/app/templates/ListPage.html
+++ b/website/app/templates/ListPage.html
@@ -59,7 +59,7 @@
         </ul>
       </div>
       <div class="col-lg-2">
-         <a href="AddItem.html" class="btn btn-success margin-bottom-sm" role="button"><span class="glyphicon glyphicon-plus"></span> Add List</a>
+         <a href="AddItem.html" class="btn btn-success margin-bottom-sm" role="button"><span class="glyphicon glyphicon-plus"></span> Add List Item</a>
          
          <form action = "" method = "post" novalidate>
           <button type = "submit" class="btn btn-info" data-target="#DeleteList" name = "delete" value = "deleteitem"><span class="glyphicon glyphicon-minus"></span> Delete Item</button>
