changed files for heroku use

--- a/website/app/templates/ListPage.html
+++ b/website/app/templates/ListPage.html
@@ -62,7 +62,7 @@
          <a href="AddItem.html" class="btn btn-success margin-bottom-sm" role="button"><span class="glyphicon glyphicon-plus"></span> Add List Item</a>
          
          <form action = "" method = "post" novalidate>
-          <button type = "submit" class="btn btn-info" data-target="#DeleteList" name = "delete" value = "deleteitem"><span class="glyphicon glyphicon-minus"></span> Delete Item</button>
+          <button type = "submit" class="btn btn-info margin-bottom-sm" data-target="#DeleteList" name = "delete" value = "deleteitem"><span class="glyphicon glyphicon-minus"></span> Delete Item</button>
           <button type = "submit" class="btn btn-danger" data-target="#DeleteList" name = "delete" value = "deletelist"><span class="glyphicon glyphicon-minus"></span> Delete List</button>
 
         </form>
