Added comments and cleaned up code

--- a/website/app/templates/AddItem.html
+++ b/website/app/templates/AddItem.html
@@ -66,11 +66,12 @@
       <div class="starter-template">
         <h1>Create New List</h1>
         
-        <!--p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>-->
       </div>
     </div><!-- /.container -->
     {% endblock %}
   <div class="container-fluid">
+    <!-- defines form to equal post so we can send info back to views.py -->
+    <!-- code for the add item form -->
       <form action = "" method = "post" role="form" novalidate>
       <div class="form-group">
         <label for="newlistname">Item</label>
